Set global configuration for JDK17