@@ -46,17 +46,17 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<skipTests>true</skipTests>
-		<version.java>1.7</version.java>
+		<version.java>8</version.java>
 		<version.groovy>2.4.0</version.groovy>
-		<version.lombok>1.16.8</version.lombok>
+		<version.lombok>1.18.24</version.lombok>
 		<version.slf4j>1.7.21</version.slf4j>
-		<version.sshd>0.12.0</version.sshd>
+		<version.sshd>2.9.2</version.sshd>
 		<version.junit>4.12</version.junit>
 		<version.apache.commons>3.3.2</version.apache.commons>
 		<version.apache.commons.configuration>1.10</version.apache.commons.configuration>
 		<version.apache.commons.codec>1.10</version.apache.commons.codec>
 		<version.apache.commons.io>2.1</version.apache.commons.io>
-		<version.surefire>2.19.1</version.surefire>
+		<version.surefire>3.0.0-M8</version.surefire>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -238,31 +238,37 @@
 			<activation>
 				<jdk>[17,)</jdk>
 			</activation>
-			<properties>
-				<version.lombok>1.18.24</version.lombok>
-			</properties>
 			<build>
 				<plugins>
 					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>properties-maven-plugin</artifactId>
-						<version>1.1.0</version>
-						<executions>
-							<execution>
-								<goals>
-									<goal>set-system-properties</goal>
-								</goals>
-								<configuration>
-									<properties>
-										<version.from.jdk17>true</version.from.jdk17>
-									</properties>
-								</configuration>
-							</execution>
-						</executions>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>${version.surefire}</version>
+						<configuration>
+							<systemProperties>
+								<property>
+									<name>jboss.home</name>
+									<value>${jboss.home}</value>
+								</property>
+								<property>
+									<name>eap.home</name>
+									<value>${eap.home}</value>
+								</property>
+								<property>
+									<name>karaf.home</name>
+									<value>${karaf.home}</value>
+								</property>
+								<property>
+									<name>fuse.home</name>
+									<value>${fuse.home}</value>
+								</property>
+							</systemProperties>
+							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
+						</configuration>
 					</plugin>
 				</plugins>
 			</build>
 		</profile>
 	</profiles>
-	
+
 </project>
